--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,1 +1,5 @@
-
+body {
+  background-color: #00244a;
+  background-image: url("https://www.transparenttextures.com/patterns/gradient-squares.png");
+  
+}
