--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,6 @@
 body {
-  background-image: url("https://www.flatironhall.com/wp-content/uploads/2019/08/bar-stools-1-1500x630.jpeg");
+  background-image: url("https://www.designyourway.net/blog/wp-content/uploads/2018/09/wood-_texture1584-1250x834.jpg");
   background-repeat: no-repeat;
-  /* background-size: cover; */
-  /* background-position: center; */
+  background-size: cover;
+  background-position: fixed;
 }
